# agent-builder-toolkit-aws-transform

./: .gitignore  GITHUB_ACTIONS_PROPOSAL.md  README.md  test-pr-do-not-merge
.github/: CODEOWNERS
.github/workflows/: _test-package.yml  ci.yml  codeql.yml  copyright-check.yml  dependency-review.yml  publish.yml
evaluation/: .github-ci-example.yml  .gitignore  README.md  pyproject.toml  requirements.txt  run_eval.py
evaluation/agent_under_test/: AGENT.md  mcp.json
evaluation/eval_runner/: __init__.py  agent_interface.py  cli.py  config.py  engine.py  models.py  test_case.py
evaluation/eval_runner/agents/: __init__.py  acp_agent.py
evaluation/eval_runner/execution/: acp_bridge.py  agent_setup.py  cli.py  mock_mcp_server.py  mocking.py  runner.py
evaluation/eval_runner/execution/data/agents/: agent-eval-judge.json
evaluation/eval_runner/execution/data/evals/: eval-schema.json
evaluation/eval_runner/execution/data/skills/scenario-runner/: SKILL.md
evaluation/eval_runner/metrics/: assertion_pass_rate.py  interface.py  llm_judge.py  registry.py
evaluation/eval_runner/tests/: conftest.py  test_acp_bridge.py  test_acp_integration.py  test_agent_interface.py  test_agent_judge_validator.py  test_assertion_pass_rate.py  test_bridge_runner.py  test_config.py  test_evaluation_engine.py  test_loader.py  test_metric_interface.py  test_models.py  test_regression_validator.py  test_sample_integration.py  test_test_case.py  test_validator_interface.py
evaluation/eval_runner/validators/: __init__.py  heuristic.py  regression.py
evaluation/src/: cli.py  run_eval.py
evaluation/src/eval_runner/: __init__.py  cli.py  engine.py  models.py  regression_report.py  test_case.py
evaluation/src/eval_runner/agents/: acp_agent.py
evaluation/src/eval_runner/execution/: __init__.py  acp_bridge.py  agent_setup.py  bridge_runner.py  cli.py  loader.py  mcp_tool_schemas.json  report.py  runner.py  usage.py
evaluation/src/eval_runner/execution/data/agents/: agent-eval-scenario.json  default-agent-system-prompt.md  default-skill-system-prompt.md
evaluation/src/eval_runner/execution/data/skills/eval-judge/: SKILL.md
evaluation/src/eval_runner/metrics/: __init__.py  _metadata.py  assertion_pass_rate.py  completeness.py  cost_budget.py  error_handling.py  latency.py  registry.py  tool_usage.py
evaluation/src/eval_runner/validators/: agent_judge.py  auto_patcher.py  interface.py
evaluation/src/evolution/: __init__.py  eval_runner_env.py  history.py  insights.py  loop.py  review.py
evaluation/src/test_data_generator/: README.md  __init__.py  context_loader.py  example.py  intelligent_generator.py
evaluation/test_data_generator/: ARCHITECTURE.md  README.md  TEST_README.md  __init__.py  cli.py  context_loader.py  deduplicate_tests.py  domain_analyzer.py  example.py  intelligent_generator.py  test_basic.py  test_units.py
evaluation/test_samples/: onboarding_intermediate.json
evaluation/tests/eval_runner/: test_agent_setup.py  test_auto_patcher.py  test_completeness.py  test_cost_budget.py  test_error_handling.py  test_evaluation_engine.py  test_heuristic_validator.py  test_latency.py  test_loader.py  test_metadata.py  test_metric_assertions_merge.py  test_metric_interface.py  test_models.py  test_regression_report.py  test_runner.py  test_sample_integration.py  test_test_case.py  test_tool_usage.py  test_usage.py
evaluation/tests/eval_runner/fixtures/: kiro_session_sample.json
evaluation/tests/test_data_generator/: test_basic.py  test_units.py
evolution/: .gitignore  README.md  pyproject.toml  run_evolution.sh
evolution/dashboard/: README.md  evolution_dashboard.py
evolution/dashboard/templates/: dashboard.html
evolution/env_configs/: agent_builder_env.py
evolution/experiment/: evolve_agent_builder.py
evolution/scripts/: generate_change_review.py  plot_training_results.py  plot_training_results_enhanced.py  reconstruct_history.py  run_agent_builder_evaluation.py  start_dashboard.sh  verify_implementation.py  verify_model_selection.py
evolution/setup/: setup-agent-builder-env.sh
evolution/src/harness_evolver/: __init__.py  analyst.py  confinement.py  environment.py  evolution_history.py  logging_config.py  orchestrator.py  snapshots.py  trajectory.py
evolution/src/harness_evolver/evolver/: __init__.py  evolver.py  inspection_guidance.md  prompt.py
evolution/tests/: test_evolution_history.py  test_evolver_confinement.py  test_selection.py  test_snapshots.py
placeholders/agentic-mcp-server/: pyproject.toml
placeholders/mcp-client/: pyproject.toml
placeholders/mcp-server/: pyproject.toml
placeholders/mcp-server/src/agent_builder_mcp/: __init__.py
placeholders/sdk/: README.md  pyproject.toml
placeholders/types/: pyproject.toml
tests/: conftest.py  test_knowledge_data_sync.py
