[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-builder-evaluation-aws-transform"
version = "0.0.0"
description = "Evaluation framework and test data generator for AWS Transform agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AWS Transform Team" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.28.0",
    "botocore>=1.28.0",
    "pyyaml>=6.0",
    # Used by the ACP execution engine (eval_runner.execution) for eval-scenario
    # JSON-Schema validation.
    "jsonschema>=4.0.0",
]

[project.scripts]
# Unified lifecycle CLI: generate / list / run / report / clean (eval_runner) +
# insights / evolve / review / evohistory (evolution adapter → HarnessEvolver).
agent-builder-eval = "cli:entry_point"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Evolution verbs (insights / evolve / review / evohistory). Pulls in the
# harness-evolver package (which itself depends on anyio + claude-agent-sdk).
# It lives in the sibling evolution/ directory; resolved via [tool.uv.sources]
# below, so install this extra with uv: `uv pip install -e ".[evolve]"`.
evolve = [
    "harness-evolver",
]

[tool.uv.sources]
# harness-evolver is a sibling project in the repo (../evolution), not on PyPI.
# uv resolves the [evolve] extra to that path as an editable install; plain pip
# does not read this table, so use uv to install the evolve extra.
harness-evolver = { path = "../evolution", editable = true }

[tool.setuptools]
# cli.py is the unified CLI entry point; run_eval.py holds the repo's EvalConfig
# wiring (imported by cli). Both are top-level modules under src/.
py-modules = ["cli", "run_eval"]

[tool.setuptools.packages.find]
# src/ layout: discover eval_runner (+ subpackages), test_data_generator, and the
# evolution adapter package.
where = ["src"]

[tool.setuptools.package-data]
# Bundle the ACP engine's data files (agent JSONs, system prompts, eval schema,
# skills) so they ship with the installed package.
"eval_runner.execution" = ["data/**/*", "*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# importlib mode: tests live under tests/ with no __init__.py packages, so test
# module names never collide with the src/ packages they exercise (e.g. the
# tests/eval_runner/ dir vs the eval_runner package).
addopts = "--import-mode=importlib"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
