[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-evolver"
version = "0.1.0"
description = "Evolve agent harnesses by analyzing run artifacts and editing the agent's target directory."
requires-python = ">=3.11"
dependencies = [
    "anyio",
    # Pinned: the SDK's control-protocol surface (e.g. the can_use_tool
    # permission callback and streaming-prompt requirement) is exercised
    # directly, and it is a fast-moving external dep.
    "claude-agent-sdk>=0.2,<0.3",
]

[project.optional-dependencies]
# Live monitoring dashboard (dashboard/evolution_dashboard.py). Optional — the
# evolution loop itself doesn't need these.
dashboard = [
    "flask>=3.0.0",
    "plotly>=5.0.0",
]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_evolver"]
